# astro_imaging

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
examples/: HSC.ipynb
python/astro_imaging/: config.py  hsc.py  images.py
