[tool.poetry]
name = "astro_imaging"
version = "0.1.0"
description = "Python library mainly for downloading and handling public HSC imaging"
authors = ["taranu <dan.s.taranu@gmail.com>"]
packages = [
    { include = "astro_imaging", from = "python" },
]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "^3"
numpy = "^1.19.0"
requests = "^2"
imageio = "^2"
matplotlib = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"