[tool.poetry]
name = "astro_imaging"
version = "0.1.0"
description = "Python library mainly for downloading and handling public HSC imaging"
authors = ["taranu <dan.s.taranu@gmail.com>"]
packages = [
    { include = "astro_imaging", from = "python" },
]

[tool.poetry.dependencies]
python = ">=3.5"
astropy = ">=2"
numpy = ">=1"
requests = ">=1"
imageio = ">=1"
matplotlib = ">=1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
